4827031 - Main application can now post real stuff to real website

--- a/configs/sample_1/index.yml
+++ b/configs/sample_1/index.yml
@@ -3,7 +3,5 @@
     username: phuongnd08
     password: 1234567
     title: Morgage news
-  every: 2 hours
+  every: 00:01
   fixedSchedule:
-    - 05:55
-    - 10:55
