5234292, 5234965 - Each site can override section information. Url dumped after each big step (login, post, logout)

--- a/test-sections/sample_1/index.yml
+++ b/test-sections/sample_1/index.yml
@@ -1,7 +1,6 @@
---- !!alpha.autoPost.Config
+--- !!alpha.autoPost.Section
   info:
     username: phuongnd08
     password: 1234567
-    title: Morgage news
   every: 00:01
   fixedSchedule:
